[project]
name = "equistore-core"
dynamic = ["version", "authors"]
requires-python = ">=3.7"

readme = "README.rst"
license = {text = "BSD-3-Clause"}
description = "Python bindings to the core equistore C API"

dependencies = ["numpy"]

keywords = ["machine learning", "molecular modeling"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Operating System :: POSIX",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
homepage = "https://lab-cosmo.github.io/equistore/latest/"
documentation = "https://lab-cosmo.github.io/equistore/latest/"
repository = "https://github.com/lab-cosmo/equistore"
# changelog = "https://github.com/lab-cosmo/equistore/blob/master/CHANGELOG.rst"

### ======================================================================== ###
[build-system]
requires = [
    "setuptools >=61",
    "wheel >=0.38",
    "cmake",
]
build-backend = "setuptools.build_meta"

[tool.setuptools]
zip-safe = false

[tool.setuptools.packages.find]
include = ["equistore*"]
namespaces = true

### ======================================================================== ###
[tool.pytest.ini_options]
python_files = ["*.py"]
testpaths = ["tests"]
