[package]
name = "metatensor-sys"
# This should be kept in sync with metatensor-core version number
version = "0.1.17"
edition = "2021"
rust-version = "1.74"

description = "Bindings to the metatensor C library"
readme = "README.md"
homepage = "https://docs.metatensor.org/latest/"
repository = "https://github.com/metatensor/metatensor"
license = "BSD-3-Clause"

include = [
    "build.rs",
    "src/",
    "metatensor-core-cxx-*.tar.gz",
]

[lib]
bench = false

[features]
default = []
# use the static build of metatensor-core instead of the shared one
static = []

[build-dependencies]
cmake = "0.1"
which = "7"

# home MSRV is now 1.81
home = "=0.5.9"
