[package]
name = "metatensor-sys"
# This should be kept in sync with metatensor-core version number
version = "0.2.3"
edition = "2024"
rust-version = "1.88"

description = "Bindings to the metatensor C library"
readme = "README.md"
homepage = "https://docs.metatensor.org/latest/"
repository = "https://github.com/metatensor/metatensor"
license = "BSD-3-Clause"

include = [
    "build.rs",
    "src/",
    "metatensor-core-cxx-*.tar.gz",
]

[lib]
bench = false

[features]
default = []
# use the static build of metatensor-core instead of the shared one
static = []

[dependencies]
dlpk = "0.4.0"

[build-dependencies]
cmake = "0.1"
which = "8"
