[package]
name = "metatensor"
version = "0.2.2"
edition = "2021"
rust-version = "1.74"

description = "Self-describing sparse tensor data format for atomistic machine learning and beyond"
readme = "../../README.md"
homepage = "https://docs.metatensor.org/latest/"
repository = "https://github.com/metatensor/metatensor"
license = "BSD-3-Clause"

[lib]
bench = false

[dependencies]
metatensor-sys = {version = "0.1.17", path="../metatensor-sys"}
dlpack = { git = "https://github.com/metatensor/dlpack.git", features=["ndarray"] }

once_cell = "1"
smallvec = {version = "1", features = ["union"]}
ndarray = {version = "0.16"}
rayon = {version = "1", optional = true}
# We need to pin this for compatibility with rustc 1.74
rayon-core = {version = "=1.12", optional = true}

criterion = {version = "0.7.0", default-features = false, optional = true}


[features]
default = []
# use the static build of metatensor-core instead of the shared one
static = ["metatensor-sys/static"]
# feature for the benchmarks
bench = ["dep:criterion"]

[dev-dependencies]
tempfile = "3"


[[bench]]
name = "labels"
harness = false
