[package]
name = "metatensor"
version = "0.2.4"
edition = "2021"
rust-version = "1.74"

description = "Self-describing sparse tensor data format for atomistic machine learning and beyond"
readme = "../../README.md"
homepage = "https://docs.metatensor.org/latest/"
repository = "https://github.com/metatensor/metatensor"
license = "BSD-3-Clause"

[lib]
bench = false

[dependencies]
metatensor-sys = {version = "0.1.18", path="../metatensor-sys"}
# dlpk = {version = "0.1.3", features = ["ndarray"]}
dlpk = { git = "https://github.com/metatensor/dlpk", rev="7e09bead", features = ["ndarray", "sync"]}

once_cell = "1"
smallvec = {version = "1", features = ["union"]}
ndarray = {version = "0.17"}
rayon = {version = "1", optional = true}
# We need to pin this for compatibility with rustc 1.74
rayon-core = {version = "=1.12", optional = true}

criterion = {version = "0.8", default-features = false, optional = true}


[features]
default = []
# use the static build of metatensor-core instead of the shared one
static = ["metatensor-sys/static"]
# feature for the benchmarks
bench = ["dep:criterion"]

[dev-dependencies]
# pin for compatibility with rustc 1.74
tempfile = "=3.24.0"
half = "<2.5"
# dlpk = {version = "0.1.3", features = ["ndarray", "half"]}
dlpk = { git = "https://github.com/metatensor/dlpk", rev="7e09bead", features = ["ndarray", "half", "sync"]}


[[bench]]
name = "labels"
harness = false

[[bench]]
name = "tensor_map"
harness = false
