[package]
name = "metatensor"
version = "0.5.0"
edition = "2024"
rust-version = "1.88"

description = "Self-describing sparse tensor data format for atomistic machine learning and beyond"
readme = "../../README.md"
homepage = "https://docs.metatensor.org/latest/"
repository = "https://github.com/metatensor/metatensor"
license = "BSD-3-Clause"

[lib]
bench = false

[dependencies]
metatensor-sys = {version = "0.2.2", path="../metatensor-sys"}
dlpk = { version = "0.4.0", features = ["ndarray", "half", "sync"]}
half = "2.7"

once_cell = "1"
ndarray = {version = "0.17"}
rayon = {version = "1", optional = true}


[features]
default = []
# use the static build of metatensor-core instead of the shared one
static = ["metatensor-sys/static"]

[dev-dependencies]
tempfile = "3"
regex = "1"
json = "0.12"

[[bench]]
name = "bench-rust-classes"
harness = false
